add tests + untested new CMake to install lib in include/Elth + namespace Elth::

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,39 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(signals LANGUAGES CXX)
+project(signal LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(signals
-    main.cpp
-    signal.h
+add_library(Elth_signal INTERFACE)
+add_library(Elth::signal ALIAS Elth_signal)
+target_include_directories(Elth_signal INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
 )
 
+
+# ============ Install ============
+
 include(GNUInstallDirs)
-install(TARGETS signals
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+
+install(
+    FILES ${CMAKE_CURRENT_SOURCE_DIR}/signal.h
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Elth
+    RENAME signal
 )
+install(
+    TARGETS Elth_signal
+    EXPORT ElthTargets
+)
+install(
+    EXPORT ElthTargets
+    NAMESPACE Elth::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Elth
+)
+
+
+# ============ Tests ============
+
+enable_testing()
+add_subdirectory(tests)
