revert cmake, I don't know what i'm doing lol

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,20 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(signal LANGUAGES CXX)
+project(signals LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(Elth_signal INTERFACE)
-add_library(Elth::signal ALIAS Elth_signal)
-target_include_directories(Elth_signal INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:include>
+add_executable(signals
+    main.cpp
+    signal.h
 )
-
-
-# ============ Install ============
 
 include(GNUInstallDirs)
-
-install(
-    FILES ${CMAKE_CURRENT_SOURCE_DIR}/signal.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Elth
-    RENAME signal
+install(TARGETS signals
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
-install(
-    TARGETS Elth_signal
-    EXPORT ElthTargets
-)
-install(
-    EXPORT ElthTargets
-    NAMESPACE Elth::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Elth
-)
-
 
 # ============ Tests ============
 
