make a correct cmake file, add macros to project connect functions when declaring a signal in a class, test these macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,9 @@ project(signals LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(signals
-    main.cpp
-    signal.h
-)
+
+
+add_library(signals INTERFACE signal.h macros.h)
 
 include(GNUInstallDirs)
 install(TARGETS signals
