change cmake file to regroup targets + rename event-signal.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,17 @@ project(signals LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(signals INTERFACE include/event_signal.h include/macros.h)
-target_include_directories(signals INTERFACE
+add_library(Signals INTERFACE include/signals.h include/macros.h)
+target_include_directories(Signals INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+    $<INSTALL_INTERFACE:include/Elth/signals>
 )
 
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
-install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-install(TARGETS signals EXPORT signalsTargets)
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Elth/signals)
+install(TARGETS Signals EXPORT signalsTargets)
 install(EXPORT signalsTargets
     FILE signalsTargets.cmake
     NAMESPACE Elth::
@@ -36,9 +36,16 @@ install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/signalsConfigVersion.cmake
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/signals
 )
+#move sources file -> #include<Elth/signals/*.h>
+install(FILES
+    include/event_signal.h
+    include/macros.h
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Elth/signals
+)
 
 # ============ Tests ============
 
+include(CTest)
 enable_testing()
 add_subdirectory(tests)
 
@@ -46,6 +53,6 @@ add_subdirectory(tests)
 #Even, after a clean it might fail, if I compile multiple times it works ?????
 add_custom_target(check ALL
     COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
-    DEPENDS signals
+    DEPENDS Signals
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
